<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_action_view_module"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_remote"
        android:icon="@drawable/ic_action_tap_and_play"
        android:title="@string/title_remote" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_action_movie_filter"
        android:title="@string/title_wish" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_action_camera_alt"
        android:title="@string/title_camera" />

</menu>
