<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgFragment"
    android:orientation="vertical"
    tools:context="info.androidhive.bottomnavigation.fragment.CategoryFragment">

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/category_button"
        android:layout_height="wrap_content"
        android:text="@string/title_category"
        />

    <Button
        android:id="@+id/channel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home" />

    <Button
        android:id="@+id/movie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_wish" />

    <Button
        android:id="@+id/banner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_remote" />

    <Button
        android:id="@+id/keys_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number Pad" />

</LinearLayout>
